tests/baselines/reference/parserIndexSignature4.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts(2,4): error TS1020: An index signature parameter cannot have an initializer.
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts(2,4): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts (2 errors) ====
    interface I {
      [a = 0]
       ~
!!! error TS1020: An index signature parameter cannot have an initializer.
       ~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    }